add endpoint to login and get token.
now endpoints can be secured with JWT bearer tokens.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 %prod.quarkus.redis.hosts=redis://localhost:6379
+
+# Public verification key
+mp.jwt.verify.publickey.location=publickey.pem
+quarkus.native.resources.includes=publickey.pem
+
+# Required issuer
+mp.jwt.verify.issuer=https://marouane.com/issuer
+
+# Private signing key
+smallrye.jwt.sign.key.location=privatekey.pem
+
